--- a/FAQ/index.html
+++ b/FAQ/index.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     
     <title>FAQ</title>
   </head>
@@ -14,27 +12,26 @@
     <div class="faq-container">
       <div class="faq active">
         <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
-        
-        <button class="faq-toggle">
-          <i class="icon-remove"></i>
-          <i class="icon-chevron-down"></i>
-        </button>
+        <p class="faq-text">They make up everything</p>
+        <button class="faq-toggle active"></button>
       </div>
 
       <div class="faq">
         <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
         <p class="faq-text">They make up everything</p>
-        <button><i class="icon-camera-retro"></i> icon-camera-retro</button>
+        <button class="faq-toggle"></button>
       </div>
 
       <div class="faq">
         <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
         <p class="faq-text">They make up everything</p>
+        <button class="faq-toggle"></button>
       </div>
 
       <div class="faq">
         <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
         <p class="faq-text">They make up everything</p>
+        <button class="faq-toggle"></button>
       </div>
     </div>
     <script src="script.js"></script>
