--- a/steps/index.html
+++ b/steps/index.html
@@ -14,7 +14,7 @@
       <div class="act-line"></div>
       <div class="pro-container">
         <div class="circle active">1</div>
-        <div class="circle">2</div>
+        <div class="circle active">2</div>
         <div class="circle">3</div>
         <div class="circle">4</div>
       </div>
